# 467Final

./: .gitignore  .gitmodules  CMakeLists.txt
armlab-regular/: arm_control_simulator.py  control_station.py  kinematics.py  rexarm.py  state_machine.py
armlab-regular/dynamixel/: dynamixel_MX.py
armlab-regular/lcmtypes/: arm_path_t.c  arm_path_t.h  arm_path_t.hpp  arm_path_t.lcm  ball_t.c  ball_t.h  ball_t.hpp  mbot_command_t.c  mbot_command_t.h  mbot_command_t.hpp  mbot_command_t.lcm  mbot_status_t.c  mbot_status_t.h  mbot_status_t.hpp  mbot_status_t.lcm  occupancy_grid_t.c  occupancy_grid_t.h  pose_xyt_t.c  pose_xyt_t.h  robot_path_t.c  robot_path_t.h
armlab-regular/lcmtypes/lcmtypes/: __init__.py  arm_path_t.py  ball_t.py  mbot_command_t.py  mbot_status_t.py
config/: camera-config.yaml
drivers/: BallDetectorTesting.cpp  CMakeLists.txt  Calibration.cpp  HoughCircleTest.cpp  VisionDriver.cpp  planner.cpp
include/common/: colors.hpp  message_channels.hpp
include/planner/: .arm_planner.hpp.swp  .ball.hpp.swp  OuterLoopController.hpp  Prediction.hpp  TrackingVis.hpp  arm_planner.hpp  ball.hpp
include/vision/core/: BallDetector.hpp  Calibrator.hpp  CloudTransformer.hpp  PCLHeaderFix.hpp  RealsenseInterface.hpp  utilities.hpp
logs/: headOnBall  lcmlog-2019-12-07.00  tests.txt
msgtypes/: arm_path_t.lcm  arm_plan_t.lcm  ball_detection_t.lcm  ball_detections_t.lcm  ball_t.lcm
scripts/: setenv.sh  setup.sh
scripts/install/: install-librealsense.sh
scripts/tools/: generate_lcm_messages.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt  message_channels.cpp
src/planner/: CMakeLists.txt  OuterLoopController.cpp  TrackingVis.cpp  arm_planner.h  ball.h  planner.cpp
src/vision/: CMakeLists.txt
src/vision/core/: BallDetector.cpp  CMakeLists.txt  Calibrator.cpp  CloudTransformer.cpp  RealsenseInterface.cpp  utilities.cpp
src/vision/tracking/: CMakeLists.txt  opencv-kalman.cpp
